# aoc-2024

./: Dockerfile  aoc2024.cabal  cabal.project  compose.yaml  day.sh  ghcup-set.sh
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day07.hs  Day08.hs  Day09.hs  Main.hs  Utils.hs
